<resources>
    <string name="app_name">Saviour</string>
    <string name="splash_screen_footer">For Safety and Security</string>
    <string name="enter_the_mobile">Enter the mobile</string>
    <string name="press_the_button_in_case_of_emergency">PRESS THE BUTTON IN CASE OF EMERGENCY</string>
    <string name="home">Home</string>
    <string name="other_helps">Other Helps</string>
    <string name="menu">Menu</string>
    <string name="instructions">Instructions</string>
    <string name="register_number">Add Members</string>
    <string name="rate_us">Rate us</string>
    <string name="delete_number">Selected Members</string>
    <string name="view_register_numbers">View Members</string>
    <string name="edit_sos_message">Edit SOS Message</string>
    <string name="other_help">Other_Help</string>
    <string name="_1"><![CDATA[1:->]]></string>
    <string name="_2"><![CDATA[2:->]]></string>
    <string name="press_the_sos_button_on_the_homepage_in_case_of_emergency_on_pressing_the_button_an_sos_message_along_with_the_linkof_your_current_location_will_be_sent_as_an_sms_to_the_all_registered_numbers">Press the SOS Button on the homepage in case of Emergency.On pressing the button,an SOS message along with the link of your CURRENT LOCATION will be sent as an SMS to the all registered numbers.</string>
    <string name="_3"><![CDATA[3:->]]></string>
    <string name="we_recommend_you_to_always_keep_your_gps_turned_on_so_that_your_device_has_enough_information_about_your_location_in_case_of_an_emergency">We recommend you to <b>always keep your GPS turned ON </b>so that your device has enough information about your location in case of an Emergency.</string>
    <string name="_4"><![CDATA[4:->]]></string>
    <string name="we_recommend_you_to_use_sos_alert_widget_and_always_keep_gps_turned_on_so_that_you_cand_send_sos_alert_in_just_one_tap">We recommend you to use SOS Alert Widget and always keep GPS turned ON so that you cand send SOS Alert in just one tap.</string>
    <string name="you_can_register_upto_10_contact_numbers">(You can Register up to 10 Contact Numbers)</string>
    <string name="enter_member_name">Enter Member Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="member_name">Member Name</string>
    <string name="mobile">Mobile</string>
    <string name="sos_message">HELP Me!! IT\'S AN EMERGANCY</string>
    <string name="sos_message1">Sos Message</string>
    <string name="this_message_along_with_your_current_location_will_be_sent_to_the_registered_numbers_when_you_press_the_sos_button">(This is message along with your current location will be sent to the registered numbers when you press the SOS Button)..</string>
    <string name="save">Save</string>
    <string name="if_you_want_to_change_the_sos_message_type_below"><b><u>This is SOS message.</u></b>\nIf you want to change the sos message\nType below</string>
    <string name="_0">0</string>
    <string name="sajal_sharma_anoop_kumar">Sajal</string>
    <string name="_8307129903">8307129903</string>
    <string name="your_name">Your name</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="your_mobile_number_shoule_be_there_in_this_mobile">Note:—> <u>Your mobile number should be present in this mobile.</u></string>
    <string name="go">Go</string>
    <string name="emergency_help">Helpline No.</string>
    <string name="back">back</string>
    <string name="register_your_emergency_contact_numbers_under_menu_register_number"><![CDATA[Register your Emergency Contact Numbers Under]]><b> MENU->REGISTER NUMBER</b></string>
    <string name="about">About us</string>
    <string name="developed_by_sajal_toshak_tanishk_nikhil">Developed by: Sajal, Toshak, Tanishk, Nikhil</string>
    <string name="ok">OK</string>
    <string name="add_contact_from_your_contact_list">Add contact from your contact list</string>
    <string name="police_emergency">Police</string>
    <string name="medical_emergency">Ambulance</string>
    <string name="fire_safety">Fire</string>
    <string name="women_safety">Women Helpline</string>
    <string name="other_helpline_no">Other Helpline No</string>
    <string name="covid">Covid</string>
</resources>