<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".Main_Activity.Menu_Instruction.instructions">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="90dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/red"
            android:layout_gravity="top"
            android:layout_marginStart="5dp"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:gravity="center_horizontal"
            android:text="@string/register_your_emergency_contact_numbers_under_menu_register_number"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:ems="15"
            android:textSize="18sp"
            tools:ignore="AllCaps">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textColor="@color/green"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:text="@string/press_the_sos_button_on_the_homepage_in_case_of_emergency_on_pressing_the_button_an_sos_message_along_with_the_linkof_your_current_location_will_be_sent_as_an_sms_to_the_all_registered_numbers"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textAlignment="center"
            android:maxEms="15"
            android:textAllCaps="true">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="138dp"
            android:gravity="center_horizontal"
            android:text="@string/we_recommend_you_to_always_keep_your_gps_turned_on_so_that_your_device_has_enough_information_about_your_location_in_case_of_an_emergency"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:maxEms="15"
            android:textColor="@color/blue"
            android:textSize="18sp">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_horizontal"
            android:text="@string/we_recommend_you_to_use_sos_alert_widget_and_always_keep_gps_turned_on_so_that_you_cand_send_sos_alert_in_just_one_tap"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textAllCaps="true"
            android:ems="15"
            android:textSize="18sp">

        </TextView>

    </LinearLayout>
</LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>