<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Main_Activity.Register_Number.Add_Number"
    >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/register_number"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_register_upto_10_contact_numbers"
                android:textColor="@color/red"
                android:layout_marginTop="100dp"
                android:gravity="center"
                android:textSize="18sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/member_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/add_member_name_icon"
                android:hint="@string/enter_member_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="Autofill" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/add_member_phone_icon"
                android:hint="@string/enter_the_mobile"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/submit"
                android:textColor="#212121" />


            <TextView
                android:id="@+id/txtnumbercount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_register_upto_10_contact_numbers"
                android:textColor="#C51162"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:textSize="18sp"/>



        </LinearLayout>
    </ScrollView>





</LinearLayout>