<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Main_Activity.Menu_View_Members.Edit_Members">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/register_number"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_80sdp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/member_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/add_member_name_icon"
                android:hint="@string/enter_member_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="Autofill" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/add_member_phone_icon"
                android:hint="@string/enter_the_mobile"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/editbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/save"
                android:textColor="#212121" />




        </LinearLayout>
    </ScrollView>


</LinearLayout>