<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neumorph_backgroundColor="@color/background"
        app:neumorph_shadowColorDark="@color/dark_shadow"
        app:neumorph_shadowColorLight="@color/light_shadow"
        app:neumorph_shadowElevation="@dimen/_5sdp"
        app:neumorph_shapeAppearance="@style/NeumorphismCard">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <TextView
                android:id="@+id/id"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="60sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/name"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/id"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/sajal_sharma_anoop_kumar"
                android:textColor="@color/blue"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/_8307129903"
                android:textColor="#FF6D00"
                android:textSize="20sp" />

        </RelativeLayout>
    </soup.neumorphism.NeumorphCardView>

</androidx.cardview.widget.CardView>